jquery fix + scrollbar + loading gif

--- a/dev/styles/kelvin-style.scss
+++ b/dev/styles/kelvin-style.scss
@@ -69,7 +69,6 @@ body {
    font-family: 'Work Sans', sans-serif;
    .hero-nav-left {
       display: flex;
-      flex: 1 0 25%;
       flex-direction: row;
       align-items: center;
       span {
@@ -84,8 +83,11 @@ body {
          font-size: 1.3rem;
       }
    }
-   .hero-nav-right {
-      float: right;
+   .hero-nav-middle {
+      position: absolute;
+      transform: translate(-50%,-50%);
+      top: 50%;
+      left: 50%;
    }
 }
 
@@ -205,7 +207,7 @@ body {
    max-width: 750px;
    display: flex;
    margin: 0 auto;
-   padding: 65px;
+   padding: 65px 0;
    color: white;
    font-size: 1.5rem;
    font-family: 'Work Sans', sans-serif;
@@ -586,4 +588,25 @@ span.test {
    &:hover {
       color: $peach;
    }
+}
+
+.loader {
+   position: fixed;
+   background: rgba(0,0,0,0.5);
+   width: 100%;
+   height: 100vh;
+   opacity: 0;
+   z-index: -10;
+   transition: 0.5s;
+   img {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%,-50%);
+   }
+}
+
+.loader-fixed {
+   opacity: 1;
+   z-index: 20;
 }
